--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,11 @@
     "config": {
         "sort-packages": true
     },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.2.x-dev"
+        }
+    },
     "autoload": {
         "psr-4": {
             "FOS\\UserBundle\\": ""
