travis php7.4 and symfony 5
Signed-off-by: evrinoma <evrinoma@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ matrix:
       env: DEPENDENCIES="symfony/lts:^2"
     - php: 7.1
       env: DEPENDENCIES="symfony/lts:^3"
+    - php: 7.4
+      env: DEPENDENCIES="symfony/lts:^5"
 
 sudo: false
 
