--- a/.travis.yml
+++ b/.travis.yml
@@ -1,44 +1,55 @@
 language: php
 
-php:
-  - 5.5
-  - 5.6
-  - 7.1
-  - 7.2
-  - 7.3
-  - 7.4
+cache:
+  directories:
+    - $HOME/.composer/cache/files
+    - $HOME/symfony-bridge/.phpunit
 
 env:
   global:
-    - TARGET=test
+    - PHPUNIT_FLAGS="-v"
+    - SYMFONY_PHPUNIT_DIR="$HOME/symfony-bridge/.phpunit"
 
 matrix:
   fast_finish: true
   include:
-    - php: 7.0
-      env: TARGET=cs_dry_run
-    - php: 5.5
-      env: COMPOSER_FLAGS="--prefer-lowest"
-    - php: 5.6
-      env: DEPENDENCIES="symfony/lts:^2"
+    # Minimum supported dependencies with the latest and oldest PHP version
+    - php: 7.2
+      env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
     - php: 7.1
+      env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
+
+      # Test the latest stable release
+    - php: 7.1
+    - php: 7.2
+      env: COVERAGE=true PHPUNIT_FLAGS="-v --coverage-text"
+
+      # Test LTS versions. This makes sure we do not use Symfony packages with version greater
+      # than 2 or 3 respectively. Read more at https://github.com/symfony/lts
+    - php: 7.2
+      env: DEPENDENCIES="symfony/lts:^2"
+    - php: 7.2
       env: DEPENDENCIES="symfony/lts:^3"
-    - php: 7.4
-      env: DEPENDENCIES="symfony/lts:^5"
 
-sudo: false
+      # Latest commit to master
+    - php: 7.2
+      env: STABILITY="dev"
 
-cache:
-  directories:
-    - $HOME/.composer/cache
+  allow_failures:
+    # Dev-master is allowed to fail.
+    - env: STABILITY="dev"
 
 before_install:
-  - echo "memory_limit=4G" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
-  # To be removed when this issue will be resolved: https://github.com/composer/composer/issues/5355
-  - if [[ "$COMPOSER_FLAGS" == *"--prefer-lowest"* ]]; then composer update --prefer-dist --no-interaction --prefer-stable --quiet; fi
-  - if [ "$DEPENDENCIES" != "" ]; then composer require --no-update $DEPENDENCIES; fi;
+  - if [[ $COVERAGE != true ]]; then phpenv config-rm xdebug.ini || true; fi
+  - if ! [ -z "$STABILITY" ]; then composer config minimum-stability ${STABILITY}; fi;
+  - if ! [ -v "$DEPENDENCIES" ]; then composer require --no-update ${DEPENDENCIES}; fi;
 
-install: composer update --prefer-dist --no-interaction $COMPOSER_FLAGS
+install:
+  - composer update ${COMPOSER_FLAGS} --prefer-dist --no-interaction
+  - ./vendor/bin/simple-phpunit install
 
 script:
- - make $TARGET
+  - composer validate --strict --no-check-lock
+  # simple-phpunit is the PHPUnit wrapper provided by the PHPUnit Bridge component and
+  # it helps with testing legacy code and deprecations (composer require symfony/phpunit-bridge)
+  - ./vendor/bin/simple-phpunit $PHPUNIT_FLAGS
