--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ matrix:
       env: DEPENDENCIES="symfony/lts:^3"
 
       # Latest commit to master
-    - php: 7.2
+    - php: 7.4
       env: STABILITY="dev"
 
   allow_failures:
@@ -40,6 +40,7 @@ matrix:
     - env: STABILITY="dev"
 
 before_install:
+  - echo "memory_limit=4G" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
   - if [[ $COVERAGE != true ]]; then phpenv config-rm xdebug.ini || true; fi
   - if ! [ -z "$STABILITY" ]; then composer config minimum-stability ${STABILITY}; fi;
   - if ! [ -v "$DEPENDENCIES" ]; then composer require --no-update ${DEPENDENCIES}; fi;
