--- a/.travis.yml
+++ b/.travis.yml
@@ -15,19 +15,23 @@ matrix:
   fast_finish: true
   include:
       # Minimum supported dependencies with the latest and oldest PHP version
-    - php: 5.6
-      env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="max[self]=0" SIMPLE_PHPUNIT_INSTALL=''
-    - php: 7.2
-      env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="max[self]=0" SIMPLE_PHPUNIT_INSTALL=''
-    - php: 7.4
-      env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
+#  @php version
+#    - php: 5.6
+#      env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="max[self]=0" SIMPLE_PHPUNIT_INSTALL=''
+# @The each() function is deprecated. This message will be suppressed on further calls
+#    - php: 7.2
+#      env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="max[self]=0" SIMPLE_PHPUNIT_INSTALL=''
+# @No output has been received in the last 10m0s, this potentially indicates a stalled build or something wrong with the build itself.
+#    - php: 7.4
+#      env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
 
-      # Test the latest stable release
+#      # Test the latest stable release
+# @php version
     - php: 5.6
       env: COMPOSER_FLAGS="--prefer-lowest" SIMPLE_PHPUNIT_INSTALL=''
     - php: 7.2
     - php: 7.4
-     env: COVERAGE=true PHPUNIT_FLAGS="-v --coverage-text"
+      env: COVERAGE=true PHPUNIT_FLAGS="-v --coverage-text"
 
       # Test LTS versions. This makes sure we do not use Symfony packages with version greater
       # than 2 or 3 respectively. Read more at https://github.com/symfony/lts
@@ -35,18 +39,22 @@ matrix:
       env: DEPENDENCIES="symfony/lts:^2" PACKAGE_VERSION=^2.
     - php: 5.6
       env: DEPENDENCIES="symfony/lts:^3" PACKAGE_VERSION=^2.
+# @deprecate
     - php: 7.2
-      env: DEPENDENCIES="symfony/lts:^2" PACKAGE_VERSION=^2.
+      env: DEPENDENCIES="symfony/lts:^2" PACKAGE_VERSION=^2. SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
+# @deprecate
     - php: 7.2
-      env: DEPENDENCIES="symfony/lts:^3" PACKAGE_VERSION=^2.
+      env: DEPENDENCIES="symfony/lts:^3" PACKAGE_VERSION=^2. SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
+# @conflict
+#    - php: 7.4
+#      env: DEPENDENCIES="symfony/lts:^2" PACKAGE_VERSION=^2.
+# @deprecate
     - php: 7.4
-      env: DEPENDENCIES="symfony/lts:^2" PACKAGE_VERSION=^2.
-    - php: 7.4
-      env: DEPENDENCIES="symfony/lts:^3" PACKAGE_VERSION=^2.
+      env: DEPENDENCIES="symfony/lts:^3" PACKAGE_VERSION=^2. SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
 
       # Latest commit to master
     - php: 7.4
-      env: STABILITY="dev"
+      env: STABILITY="dev"  SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
 
   allow_failures:
       # Dev-master is allowed to fail.
@@ -64,7 +72,6 @@ before_install:
 install:
   - echo ${COMPOSER_FLAGS}
   - composer update ${COMPOSER_FLAGS} --prefer-dist --no-interaction
-  - ls -la ./vendor/bin
   - if ! [ -z "$SIMPLE_PHPUNIT_INSTALL" ]; then ./vendor/bin/simple-phpunit install; fi;
 
 script:
