--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,8 @@ matrix:
 
 #      # Test the latest stable release
 # @php version
-    - php: 5.6
-      env: COMPOSER_FLAGS="--prefer-lowest" SIMPLE_PHPUNIT_INSTALL=''
+#    - php: 5.6
+#      env: COMPOSER_FLAGS="--prefer-lowest" SIMPLE_PHPUNIT_INSTALL=''
     - php: 7.2
     - php: 7.4
       env: COVERAGE=true PHPUNIT_FLAGS="-v --coverage-text"
