--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         }
     ],
     "require": {
-        "php": "^5.5.9 || ^7.1",
+        "php": "^5.5.9 || ^7.0 || ^8.0",
         "paragonie/random_compat": "^1 || ^2 || ^9",
         "symfony/form": "^2.8 || ^3.0 || ^4.0 || ^5.0",
         "symfony/framework-bundle": "^2.8 || ^3.0 || ^4.0 || ^5.0",
@@ -33,13 +33,13 @@
         "symfony/templating": "^2.8 || ^3.0 || ^4.0 || ^5.0",
         "symfony/translation": "^2.8 || ^3.0 || ^4.0 || ^5.0",
         "symfony/twig-bundle": "^2.8 || ^3.0 || ^4.0 || ^5.0",
-        "symfony/validator": "^2.8 || ^3.0 || ^4.0 || ^5.0",
+        "symfony/validator": "^2.8 || ^3.0 || ^4.0 || ^5.0 ",
         "twig/twig": "^1.28 || ^2.0 || ^3.0"
     },
     "require-dev": {
         "doctrine/doctrine-bundle": "^2.1",
         "friendsofphp/php-cs-fixer": "^2.2",
-        "phpunit/phpunit": "^4.8.35 || ^5.7.11 || ^6.5",
+        "phpunit/phpunit": "^4.8.35 || ^5.7.11 || ^6.5 || ^9.5.2",
         "swiftmailer/swiftmailer": "^4.3 || ^5.0 || ^6.0",
         "symfony/console": "^2.8 || ^3.0 || ^4.0 || ^5.0",
         "symfony/phpunit-bridge": "^2.8 || ^3.0 || ^4.0 || ^5.0",
