--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ cache:
 
 env:
   global:
+    - PACKAGE_VERSION=""
     - PHPUNIT_FLAGS="-v"
+    - PHPUNIT_VERSION=""
     - SIMPLE_PHPUNIT_INSTALL="true"
     - SYMFONY_PHPUNIT_DIR="$HOME/symfony-bridge/.phpunit"
 
@@ -29,9 +31,9 @@ matrix:
 # @php version
 #    - php: 5.6
 #      env: COMPOSER_FLAGS="--prefer-lowest" SIMPLE_PHPUNIT_INSTALL=''
-    - php: 7.2
-    - php: 7.4
-      env: COVERAGE=true PHPUNIT_FLAGS="-v --coverage-text"
+
+# @deprecate
+#    - php: 7.2
 
       # Test LTS versions. This makes sure we do not use Symfony packages with version greater
       # than 2 or 3 respectively. Read more at https://github.com/symfony/lts
@@ -52,8 +54,17 @@ matrix:
     - php: 7.4
       env: DEPENDENCIES="symfony/lts:^3" PACKAGE_VERSION=^2. SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
 
-      # Latest commit to master
+    - php: 7.3
+      env: SYMFONY_VERSION='4.*' COMPOSER_FLAGS="--prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="max[self]=0" PHPUNIT_VERSION='^9.1' SIMPLE_PHPUNIT_INSTALL=''
     - php: 7.4
+      env: SYMFONY_VERSION='5.*'
+    - php: 8.0
+      env: SYMFONY_VERSION='5.*'
+
+    # Latest commit to master
+    - php: 7.4
+      env: COVERAGE=true PHPUNIT_FLAGS="-v --coverage-text"
+    - php: 8.0
       env: STABILITY="dev"  SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
 
   allow_failures:
@@ -68,10 +79,13 @@ before_install:
   - if [[ $COVERAGE != true ]]; then phpenv config-rm xdebug.ini || true; fi
   - if ! [ -z "$STABILITY" ]; then composer config minimum-stability ${STABILITY}; fi;
   - if ! [ -v "$DEPENDENCIES" ]; then composer require --no-update ${DEPENDENCIES}; fi;
+  - if ! [ -z "$PHPUNIT_VERSION" ]; then composer --no-update require --dev phpunit/phpunit ${PHPUNIT_VERSION}; fi;
+  - if ! [ -z "$SYMFONY_VERSION" ]; then composer --no-update require symfony/symfony:${SYMFONY_VERSION}; fi;
 
 install:
   - echo ${COMPOSER_FLAGS}
   - composer update ${COMPOSER_FLAGS} --prefer-dist --no-interaction
+  - echo ${SIMPLE_PHPUNIT_INSTALL}
   - if ! [ -z "$SIMPLE_PHPUNIT_INSTALL" ]; then ./vendor/bin/simple-phpunit install; fi;
 
 script:
