--- a/.travis.yml
+++ b/.travis.yml
@@ -55,15 +55,15 @@ matrix:
       env: DEPENDENCIES="symfony/lts:^3" PACKAGE_VERSION=^2. SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
 
     - php: 7.3
-      env: SYMFONY_VERSION='4.*' COMPOSER_FLAGS="--prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="max[self]=0" PHPUNIT_VERSION='^9.1' SIMPLE_PHPUNIT_INSTALL=''
+      env: SYMFONY_VERSION='4.*' COMPOSER_FLAGS="--prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="max[self]=0" PHPUNIT_VERSION='^9.1' SIMPLE_PHPUNIT_INSTALL='' PACKAGE_VERSION=^2.
     - php: 7.4
-      env: SYMFONY_VERSION='5.*'
+      env: SYMFONY_VERSION='5.*' SYMFONY_DEPRECATIONS_HELPER=weak
     - php: 8.0
-      env: SYMFONY_VERSION='5.*'
+      env: SYMFONY_VERSION='5.*' SYMFONY_DEPRECATIONS_HELPER=weak
 
     # Latest commit to master
     - php: 7.4
-      env: COVERAGE=true PHPUNIT_FLAGS="-v --coverage-text"
+      env: COVERAGE=true PHPUNIT_FLAGS="-v --coverage-text" SYMFONY_DEPRECATIONS_HELPER=weak
     - php: 8.0
       env: STABILITY="dev"  SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
 
