--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ matrix:
 # @The each() function is deprecated. This message will be suppressed on further calls
 #    - php: 7.2
 #      env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="max[self]=0" SIMPLE_PHPUNIT_INSTALL=''
+#    - php: 7.3
+#      env: SYMFONY_VERSION='4.*' COMPOSER_FLAGS="--prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="max[self]=0" PHPUNIT_VERSION='^9.1' SIMPLE_PHPUNIT_INSTALL='' PACKAGE_VERSION=^2.
 # @No output has been received in the last 10m0s, this potentially indicates a stalled build or something wrong with the build itself.
 #    - php: 7.4
 #      env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
@@ -54,8 +56,6 @@ matrix:
     - php: 7.4
       env: DEPENDENCIES="symfony/lts:^3" PACKAGE_VERSION=^2. SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
 
-    - php: 7.3
-      env: SYMFONY_VERSION='4.*' COMPOSER_FLAGS="--prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="max[self]=0" PHPUNIT_VERSION='^9.1' SIMPLE_PHPUNIT_INSTALL='' PACKAGE_VERSION=^2.
     - php: 7.4
       env: SYMFONY_VERSION='5.*' SYMFONY_DEPRECATIONS_HELPER=weak
     - php: 8.0
