--- a/.travis.yml
+++ b/.travis.yml
@@ -40,26 +40,36 @@ matrix:
       # Test LTS versions. This makes sure we do not use Symfony packages with version greater
       # than 2 or 3 respectively. Read more at https://github.com/symfony/lts
     - php: 5.6
-      env: DEPENDENCIES="symfony/lts:^2" PACKAGE_VERSION=^2.
+      env: DEPENDENCIES="symfony/lts:^2" PACKAGE_VERSION=^2.1.2
     - php: 5.6
-      env: DEPENDENCIES="symfony/lts:^3" PACKAGE_VERSION=^2.
+      env: DEPENDENCIES="symfony/lts:^3" PACKAGE_VERSION=^2.1.2
 # @deprecate
     - php: 7.2
-      env: DEPENDENCIES="symfony/lts:^2" PACKAGE_VERSION=^2. SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
+      env: DEPENDENCIES="symfony/lts:^2" PACKAGE_VERSION=^2.1.2 SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
 # @deprecate
     - php: 7.2
-      env: DEPENDENCIES="symfony/lts:^3" PACKAGE_VERSION=^2. SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
+      env: DEPENDENCIES="symfony/lts:^3" PACKAGE_VERSION=^2.1.2 SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
 # @conflict
 #    - php: 7.4
 #      env: DEPENDENCIES="symfony/lts:^2" PACKAGE_VERSION=^2.
 # @deprecate
     - php: 7.4
-      env: DEPENDENCIES="symfony/lts:^3" PACKAGE_VERSION=^2. SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
+      env: DEPENDENCIES="symfony/lts:^3" PACKAGE_VERSION=^2.1.2 SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
 
     - php: 7.4
-      env: SYMFONY_VERSION='5.*' SYMFONY_DEPRECATIONS_HELPER=weak
+      env: SYMFONY_VERSION='5.0.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_VERSION=^2.1.3
     - php: 8.0
-      env: SYMFONY_VERSION='5.*' SYMFONY_DEPRECATIONS_HELPER=weak
+      env: SYMFONY_VERSION='5.0.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_VERSION=^2.1.3
+
+    - php: 7.4
+      env: SYMFONY_VERSION='5.1.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_VERSION=^2.1.3
+    - php: 8.0
+      env: SYMFONY_VERSION='5.1.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_VERSION=^2.1.3
+
+    - php: 7.4
+      env: SYMFONY_VERSION='5.2.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_VERSION=^2.1.3
+    - php: 8.0
+      env: SYMFONY_VERSION='5.2.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_VERSION=^2.1.3
 
     # Latest commit to master
     - php: 7.4
